--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #02076C;
     color: white;
+    padding-bottom: 100px;
 }
 
 .fondo {
@@ -19,4 +20,13 @@ body {
 
 .noActivo {
     color: #5F8E93;
+}
+
+.formComentario {
+    margin-bottom: 120px;
+    margin-top: 100px;
+}
+
+.modal-dialog {
+    color: black;
 }
