--- a/templates/noticia/noticia.html.twig
+++ b/templates/noticia/noticia.html.twig
@@ -2,6 +2,6 @@
 <div class="container mt-2">
     <h1>{{noticia.titular}}</h1>
     <img class="w-100" src="{{ asset('images/'~noticia.imagen) }}" alt="">
-    <p>{{noticia.contenido}}</p>
+    <p class="mt-2">{{noticia.contenido}}</p>
 </div>
 {% endblock %}
