--- a/templates/noticia/noticias.html.twig
+++ b/templates/noticia/noticias.html.twig
@@ -21,32 +21,10 @@
                     <small>Editar</small>
                 </a>
                 <br>
-                <a href="" data-toggle="modal" data-target="#confirmarBorrarNoticia">
-                    <small>Eliminar</small>
-                </a>
+                <a href="{{ path('eliminarNoticia', {id: noticia.id}) }}"><small>Eliminar</small></a>
             </div>
             {% endif %}
         </div>
-    </div>
-
-    <div class="modal fade" id="confirmarBorrarNoticia" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-        <div class="modal-header">
-            <h5 class="modal-title" id="staticBackdropLabel"><i class="fas fa-exclamation-circle"></i>¡Atención!<i class="fas fa-exclamation-circle"></i></h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <div class="modal-body">
-            ¿Está seguro de que desea eliminar la noticia?
-        </div>
-        <div class="modal-footer">
-            <a class="btn btn-secondary" data-dismiss="modal">Cancelar</a>
-            <a href="{{ path('eliminarNoticia', {id: noticia.id}) }}" class="btn btn-primary">Aceptar</a>
-        </div>
-        </div>
-    </div>
     </div>
     {% else %}
     <p>No hay noticias</p>
