--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Inicio de Sesión{% endblock %}
 
 {% block body %}
+<div class="container">
 <form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -35,9 +36,10 @@
         </div>
     #}
 
-    <button class="btn btn-primary" type="submit">
+    <button class="btn btn-primary mt-2" type="submit">
         Iniciar Sesión
     </button>
 </form>
-<a href="{{ path('registro') }}">¿Aún no tienes cuenta? ¡Regístrate!</a>
+<a class="mt-2" href="{{ path('registro') }}">¿Aún no tienes cuenta? ¡Regístrate!</a>
+</div>
 {% endblock %}
