--- a/templates/discusion/discusion.html.twig
+++ b/templates/discusion/discusion.html.twig
@@ -10,7 +10,7 @@
             <div class="col-2 border-right">
                 <div class="row">
                     <div class="col-8">
-                        <img width="100px" height="100px" src="{% if comentario.autor.fotoPerfil %}{{asset('images/'~comentario.autor.fotoPerfil)}}{% else %}{{asset('images/defecto.jpg')}}{% endif %}" alt="">
+                        <img width="100px" height="100px" src="{% if comentario.autor.fotoPerfil %}{{asset('images/'~comentario.autor.fotoPerfil)}}{% endif %}" alt="">
                         <a href="{{path('perfil', {'id' : discusion.creador.id})}}"><small>{{comentario.autor.nombreUsuario}}</small></a>
                         <small>{{comentario.fecha|date('d-m-Y')}}</small>
                     </div>
@@ -32,7 +32,8 @@
         </div>
     </div>
     {% endfor %}
-    <div class="container fixed-bottom formComentario">
+    {% if app.user %}
+    <div class="container formComentario">
         <p class="my-2">Deja tu comentario:</p>
         {{ form_start(form) }}
         <div class="form-group">
@@ -41,6 +42,7 @@
         {{form_widget(form.save) }} 
         {{ form_end(form) }}
     </div>
+    {% endif %}
     
 </div>
 {% endblock %}
