--- a/templates/juego/juegos.html.twig
+++ b/templates/juego/juegos.html.twig
@@ -5,8 +5,8 @@
     <div class="row">
         {% for juego in juegos %}
         <div class="col-12 col-sm-4">
-            <div class="fondo">
-                <a href="{{path('juego', { id : juego.id })}}" class="btn btn-primary"><img width="100%" height="250px" src="{{juego.background_image}}" class="card-img-top" alt="..."></a>
+            <div class="fondo text-center">
+                <a href="{{path('juego', { id : juego.id })}}"><img width="100%" height="250px" src="{{juego.background_image}}" class="card-img-top" alt="..."></a>
                 <h5 class="card-title">{{juego.name}}</h5>
             </div>
         </div>
