--- a/templates/gamerforum/index.html.twig
+++ b/templates/gamerforum/index.html.twig
@@ -14,22 +14,22 @@
                     <div class="carousel-item active">
                         <img src="images/imagen1.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Primera Imagen</h5>
-                            <p>Primer Texto</p>
+                            <h5>¡Bienvenido a GamerForum!</h5>
+                            <p>Un lugar en el que podrás expresar tus inquietudes sobre videojuegos, llevar la cuenta de los juegos que juegas y mucho más...</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/imagen2.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Segunda Imagen</h5>
-                            <p>Segundo Texto</p>
+                            <h5>Infórmate sobre cualquier videojuego</h5>
+                            <p>Con los datos recibidos de una API externa siempre actualizada tendrás acceso a datos actualizados de infinidad de juegos</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/imagen3.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Tercera Imagen</h5>
-                            <p>Tercer Texto</p>
+                            <h5>Lleva tu experiencia al siguiente nivel</h5>
+                            <p>Mediante la funcionalidad de tu lista personal de juegos podrás llevar la cuenta de los títulos que has jugado, quieres jugar o estás jugando</p>
                         </div>
                     </div>
                 </div>
