--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,7 @@
                                 <a class="dropdown-item" href="{{ path('perfil', {id: app.user.id}) }}">Perfil</a>
                                 {% if is_granted('ROLE_ADMIN') %}
                                 <a class="dropdown-item" href="{{ path('usuarios')}}">Usuarios</a>
+                                <a class="dropdown-item" href="{{ path('mensajes')}}">Mensajes</a>
                                 {% endif %}
                                 <a class="dropdown-item" href="{{ path('app_logout') }}">Cerrar Sesión</a>
                             </div>
