--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}GamerForum{% endblock %}</title>
+        <link rel="shortcut icon" type="image/jpg" href="{{asset('images/favicon.ico')}}"/>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('dist/bootstrap/css/bootstrap.min.css') }}">
             <link rel="stylesheet" href="{{ asset('css/style.css') }}">
